vulkan: Exports symbol with same name as libgstgl on macOS
0:02:59.568504 [(79/81) gstreamer-1.0-osx-framework -> install]
ld: warning: symbol '__invoke_on_main' re-exported from libgstgl-1.0.0.dylib and libgstvulkan-1.0.0.dylib
This will probably cause problems when using both in the same process. Maybe this shouldn't be exported at all?
CC @ystreet
Edited by Matthew Waters