gst-libs/gst/gl/cocoa/gstgl_cocoa_private.h
@@ -60,6 +60,7 @@ struct _GstGLContextCocoaPrivate
 
 gboolean gst_gl_window_cocoa_create_window (GstGLWindowCocoa *window_cocoa);
 
+G_GNUC_INTERNAL
 void _invoke_on_main (GstGLWindowCB func, gpointer data, GDestroyNotify notify);
 
 G_END_DECLS
